[package]
edition = "2021"
name = "dcs-rpc-dc-client"
rust-version = "1.56"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stubs = {package = "dcs-grpc-stubs", version = "0.1", path = "../stubs", features = ["client"]}
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tonic = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.19.0"
